# JointController

./: .gitignore  CMakeLists.txt  README.md  dual_spi_overlay.dts
example/: CMakeLists.txt  main.cpp
python_test/: spine.py
sanpo_api/: CMakeLists.txt
sanpo_api/include/: common_type.h  joint_controller.h
sanpo_api/include/internal/: actuator_base.h  common_utils.h  robstride.h  spi_device.h  spi_manager.h  spi_node.h  spi_protocol.h  version.h
sanpo_api/src/: common_utils.cpp  debug.cpp  joint_controller.cpp  robstride.cpp  spi_device.cpp  spi_manager.cpp  spi_protocol.cpp
